styles/login.css
@charset "utf-8";

@media screen and (max-width: 768px) {

	html,
	body {
		background-position: top right !important;
	}

	.welcome-header h1 {
		font-size: 45px !important;
		margin-top: 40px;
	}

	.username-container {
		margin-top: 20px !important;
	}

	input[type="text"],
	input[type="password"] {
		width: 300px !important;
		height: 35px !important;
	}

	input::placeholder,
	.show-password {
		font-size: 18px !important;
	}

	.signup,
	.login {
		width: 300px !important;
		height: 40px !important;
		font-size: 20px !important;
		/* margin-top: 15px !important; */
	}

	.signup {
		margin-top: 10px !important;
	}

	.or {
		width: 300px !important;
		margin: 15px auto !important;
	}

	.or:before,
	.or:after {
		width: 130px !important;
	}
}

html,
body {
	justify-content: flex-start !important;
}

.centered * {
	text-align: center;
	font-family: "Nanum Myeongjo";
	color: var(--white);
}

div {
	display: block;
}

.welcome-header h1 {
	font-size: 60px;
	font-style: normal;
	font-weight: 50;
	color: var(--truewhite);
	/* line-height: 69px; */
}

.input-lines {
	position: relative;
	display: flex;
	flex-direction: column;
}

.username-container {
	margin-bottom: 20px;
	margin-top: 70px;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	align-content: center;
	align-items: center;
}

.password-container {
	position: relative;
	width: 100%;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	align-content: center;
	align-items: center;
}

.show-password {
	cursor: pointer;
	font-style: normal;
	font-size: 20px;
	background-color: #0d0d0d00;
	opacity: 0.8;
	border: none;
	position: absolute;
	left: 64%;
	padding-left: 40px;
	padding-top: 15px;
}

.password-visible {
	margin-left: -55px;
}

.username,
.password {
	text-align: left;
	padding-left: 15px;
}

.forgot-password {
	font-family: 'NanumMyeongjo';
	font-style: normal;
	font-size: 18px;
	color: var(--white);
	margin-top: 10px;
	opacity: 0.8;
	margin-left: 350px;
}

.forgot-password a {
	text-decoration: none;
	color: inherit;
}

input[type="text"],
input[type="password"] {
	width: 463px;
	height: 49px;
	background-color: var(--shadowedblack);
	border: 0.2px solid var(--white);
	color: var(--white);
	font-family: 'NanumMyeongjo';
	font-style: normal;
	font-weight: 300;
	font-size: 20px;
	/* line-height: 35px; */
	display: inline-block;
	flex-grow: 1;
}

input::placeholder {
	font-family: 'NanumMyeongjo';
	font-style: normal;
	/* font-weight: 300; */
	font-size: 20px;
	/* line-height: 35px; */
	color: #FFFFFF;
	opacity: 0.8;
}

input {
	border-radius: 7px;
	border: 1px solid var(--blue);
}

.show-password:hover {
	cursor: pointer;
	opacity: 1;
}

.signup,
.login {
	width: 475px;
	height: 49px;
	background-color: var(--snowwhite);
	padding: 10px 20px;
	border-radius: 12px;
	font-family: 'NanumMyeongjo';
	border-width: 0;
	font-size: 25px;
	color: var(--black);
	text-decoration: none;
	margin-top: 10px;
}

.signup a,
.login a {
	text-decoration: none;
	color: var(--black);
}

.signup:hover,
.login:hover {
	background-color: var(--white);
	cursor: pointer;
}

.or {
	margin: 20px auto;
	color: var(--snowwhite);
	text-align: center;
	font-size: 18px;
	width: 473px;
	position: relative;

}

.or:before {
	content: "";
	display: block;
	width: 200px;
	height: 1px;
	background: var(--white);
	top: 50%;
	position: absolute;
}

.or:after {
	content: "";
	display: block;
	width: 200px;
	height: 1px;
	background: var(--white);
	right: 0;
	top: 50%;
	position: absolute;
}

.error {
	color: red;
	display: block;
	width: 300px;
	padding-top: 10px;
}

